debuging use model mongo

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "mongodb/mongodb": "^1.12",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
