--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+NOSQL_CONNECTION=mongodb
+NOSQL_URL=mongodb://localhost:27017
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
